--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
       <div class="header__right"><span class="products-in-cart">3</span></div>
     </header>
 
-    <div class="subheader">
+    <section class="subheader">
       <h1 class="subheader__title">Kenakata Summer Collection</h1>
       <h3 class="subheader__subtitle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla, at!</h3>
       <br>
       <a href="#0" class="btn btn_shop-now">Shop Now</a>
 
-    </div>
+    </section>
 
     <section class="new-products">
       <h2 class="section__header-title">New products</h2>
@@ -105,8 +105,13 @@
           <p class="product-card__price"><span>$85.00</span>$55.00</p>
         </div>
       </div>
+
+      <a href="#0" class="browse-all-items">Browse All Items</a>
     </section>
   </div>
+  <div class="intersection">
+    <h1 class="intersection__title">Get Something You Love</h1>
+    <a class="btn_shop-now intersection-btn">Shop Now</a>
   </div>
 </body>
 
